# parallel-computing

./: CMakeLists.txt  README.md
cg/: CMakeLists.txt  cg-multi.cpp  cg.cpp  introduction.docx  matrix.py  test.sh
mandelbrot/: CMakeLists.txt  mandelbrot-multi.cpp  mandelbrot.cpp  mandelbrot.docx
parallelio/: CMakeLists.txt  parallelio.cpp  parallelio.docx
random_reduction/: CMakeLists.txt  Reduction-multi.cpp  Reduction.cpp  Validation_mpi.cpp  random_reduction.docx  test.sh  说明.txt
